# Form_Automation

./: .gitignore  README.md  manage.py  pyproject.toml
LogiStream/: apps.py  urls.py  views.py
LogiStream/assets/LogiStream/css/: style.css
LogiStream/templates/LogiStream/: form1.html
LogiStream/templates/LogiStream/view/: form1.html  form3.html
docs/: Gerenciamento_IDS_Volumes_Equipamentos.md  Preenchendo_Dropdown_Django.md
examples/: endereco.html  home.html
examples/prototype/: index.html  script.js  styles.css
examples/prototype2/: dinamic_form.html  script.js  style.css
form_automation/: asgi.py  settings.py  urls.py  wsgi.py
view/assets/css/: style.css
view/html/: form1.html  form2.html  form3.html  form4.html  form5.html
view/js/: form2.js  form3.js  form4.js  form5.js  mascaras.js
