[tool.poetry]
name = "form-automation"
version = "0.1.0a12"
description = ""
authors = ["EVANGELISTA-RIBEIRO <joaovictor.setembro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
